# demo-libtorch

./: CMakeLists.txt  README.md
src/: main.cpp  mnist.cpp
